# DS-ProSolution

./: .gitignore  CLAUDE.md  README.md  tmpclaude-5915-cwd
apps/api/: .env.example  README.md  pyproject.toml  tmpclaude-3c84-cwd
apps/api/migrations/: 000_cleanup_auth_schema.sql  001_auth_schema.sql  002_bookkeeping_security.sql  003_bookkeeping_redesign.sql  004_user_management.sql  005_admin_lockout_prevention.sql  006_org_owner.sql  007_department_roles.sql  008_migrate_overrides_to_dept_roles.sql  009_drop_user_permission_overrides.sql  010_add_field_level_permissions.sql  011_rename_bookkeeping_permissions.sql  012_remove_orders_returns_placeholders.sql  013_user_type_and_status.sql  014_drop_department_columns.sql  015_drop_invites_account_type.sql  016_has_permission_function.sql  017_rbac_remarks_policies.sql  018_drop_legacy_dept_policies.sql  019_drop_can_write.sql  020_drop_legacy_columns.sql  021_allow_pending_dept_roles.sql  022_remove_membership_status.sql  023_fix_membership_dept_roles_org_guard.sql  024_add_suspended_status.sql  024_membership_dept_roles_rls_policy_guard.sql  025_membership_dept_roles_rls_policy_guard.sql  026_fix_mdr_suspended_access.sql  027_admin_remarks.sql  028_automation.sql  029_use_existing_accounts.sql  030_account_auto_reconnect.sql  031_agent_hierarchy.sql  032_fix_amazon_agent_account_lookup.sql  033_account_ebay_key.sql  034_remove_blocked_accounts.sql  035_access_codes.sql  036_presence_system.sql  037_collection_infrastructure.sql  038_seller_audit_log.sql  (+16 more)
apps/api/tests/: test_health.py  test_pagination.py  (+1 more)
(+639 files in other folders)
